[package]
name = "lazy-clone-collections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
enable_bench = []

[dependencies]
#serde = "1.0"
#serde_test = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_test = { version = "1.0", optional = true }

[dev-dependencies]
quickcheck = "1"