[package]
name = "lazy-clone-collections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bench = []

[dependencies]
serde = { version = "1.0", optional = true }
serde_test = { version = "1.0", optional = true }

[dev-dependencies]
quickcheck = "1"