[package]
name = "lazy-clone-collections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bench = ["im"]

[dependencies]
im = { version = "15.1.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_test = { version = "1.0", optional = true }

[dev-dependencies]
proptest = "1.0.0"
quickcheck = "1"